# fence

./: .env.example  .flake8  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  full_transcript_calude_code.md  mypy.ini  prompts.md  pyproject.toml
.claude/rules/: architecture.md  standards.md  testing.md
alembic/: env.py
alembic/versions/: 0001_create_covenant_reports.py  0002_create_assets.py  0003_add_eligibility_and_covenant_state.py  0004_add_audit_hash_to_reports.py  0005_add_accumulated_totals_to_reports.py  0006_not_nullable_colums_for_reports.py  0007_add_composite_indexes.py
app/: main.py  settings.py
app/application/: registry.py
app/application/commands/: calculate_covenant.py  create_facility_report.py  ingest_assets.py
app/application/queries/: get_facility_state.py  get_report.py
app/application/services/: asset_ingestion_service.py  covenant_state_service.py
app/application/use_cases/: calculate_covenant.py  create_facility_report.py  get_covenant_report.py  get_facility_state.py  ingest_assets.py  verify_report.py
app/domain/: errors.py
app/domain/asset/: base.py  educa.py  nomina.py  payearly.py  record.py  repository.py
app/domain/calculations/: educa.py  nomina.py  (+1 more)
data/: facility_a_educa_isa.json  facility_b_payearly_ewa.json  facility_c_nomina.json
tests/: conftest.py
tests/integration/: test_api_assets.py  test_api_covenants.py  test_asset_repository.py  test_error_handlers.py  test_facility_covenant_state_repository.py  test_postgres_repository.py
tests/unit/: test_publishers.py
(+38 files in other folders)
